--- a/requirements.txt
+++ b/requirements.txt
@@ -11,29 +11,51 @@ click==8.1.8
 distro==1.9.0
 filelock==3.17.0
 frozenlist==1.5.0
+fsspec==2025.2.0
 futures==3.0.5
 googlesearch-python==1.3.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.28.1
 idna==3.10
+Jinja2==3.1.5
 jiter==0.8.2
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 lxml==5.3.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
 msgpack==1.1.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==2.2.2
 openai==1.61.1
 packaging==24.2
+pillow==11.1.0
 protobuf==5.29.3
 pydantic==2.10.6
 pydantic_core==2.27.2
 PyYAML==6.0.2
+rank-bm25==0.2.2
 ray==2.42.0
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 rpds-py==0.22.3
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+sentence-transformers==3.4.1
+setuptools==75.8.0
 sniffio==1.3.1
 soupsieve==2.6
+sympy==1.13.1
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+torch==2.6.0
 tqdm==4.67.1
+transformers==4.48.3
 typing_extensions==4.12.2
 urllib3==2.3.0
